[tool.poetry]
name = "zoject"
version = "0.1.0"
description = "A simple project manager"
authors = ["DanielMuringe <danielmuringe@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
betterargs = "^0.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
